--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "android-gradle-catalogs"]
-	path = android-gradle-catalogs
-	url = git@github.com:Lyxnx/android-gradle-catalogs.git
+[submodule "gradle-catalogs"]
+	path = gradle-catalogs
+	url = git@github.com:Lyxnx/gradle-catalogs.git
